--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,7 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+server/server/
 server/server/connectDB.js
+server/.env
+server/config.js
