--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "chalk": "^4.1.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "firebase": "^9.19.1",
