--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-feather": "^1.1.2",
