--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,10 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.0.2",
+    "mongoose": "^7.2.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.3",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "sort-objects-array": "^2.0.0",
