--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "nativewind": "^2.0.11",
+    "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-feather": "^1.1.2",
@@ -33,11 +36,13 @@
     "react-native-svg": "^13.9.0",
     "react-native-switch": "^1.5.1",
     "react-native-tab-view": "^3.5.1",
+    "react-native-tailwindcss": "^1.1.11",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "react-test-renderer": "18.2.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
