--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.71.6",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.1.0",
